mylar/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mylar
  labels:
    app: mylar
spec:
  ports:
  - name: http
    port: 8090
  selector:
    app: mylar
